<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="cancel_label">Cancel</string>
    <string name="confirm_label">Confirm</string>
    <string name="selected_folder_label">Selected folder:</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name "%1$s"?</string>
    <string name="create_folder_success">Created new folder</string>
    <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error">Could not create folder</string>
    <string name="up_label">Up</string>

</resources>